Fix navbar on small res

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -55,3 +55,13 @@ body::-webkit-scrollbar-thumb {
     top: 0px;
     opacity: .8;
 }
+
+#loader {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    font-size: 40px;
+    color: white;
+    font-family: sans-serif;
+}
